--- a/bigbluebutton-html5/imports/ui/components/nav-bar/talking-indicator/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/talking-indicator/styles.scss
@@ -100,3 +100,9 @@
     background-color: var(--color-danger);
   }
 }
+
+.mobileHide {
+  @include mq($small-only) {
+    visibility: hidden;
+  }
+}
